MVC and velocity

--- a/pom.xml
+++ b/pom.xml
@@ -296,7 +296,21 @@
       <artifactId>quartz</artifactId>
       <version>${quartz.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.velocity</groupId>
+      <artifactId>velocity</artifactId>
+      <version>1.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.velocity</groupId>
+      <artifactId>velocity-tools</artifactId>
+      <version>2.0</version>
+    </dependency>
+
   </dependencies>
+
+
 
   <build>
     <finalName>blog</finalName>
@@ -339,6 +353,7 @@
           <include>*.xml</include>
           <include>spring/*</include>
           <include>mybatis/**/*</include>
+          <include>velocity/*</include>
         </includes>
         <excludes>
           <exclude>config.properties</exclude>
