--- a/src/main/resources/config/dev/jdbc.properties
+++ b/src/main/resources/config/dev/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://106.15.182.185:3306/blog_dev
+jdbc.url=jdbc:mysql://106.15.182.185:3306/imant
 jdbc.username=root
 jdbc.password=imant8089._
