--- a/pom.xml
+++ b/pom.xml
@@ -308,9 +308,19 @@
       <version>2.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.squareup.okhttp</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>2.5.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.6</version>
+    </dependency>
+
   </dependencies>
-
-
 
   <build>
     <finalName>blog</finalName>
