--- a/pom.xml
+++ b/pom.xml
@@ -320,6 +320,12 @@
       <version>1.16.6</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.googlecode.xmemcached</groupId>
+      <artifactId>xmemcached</artifactId>
+      <version>1.4.3</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -378,6 +384,7 @@
           <include>config.properties</include>
           <include>jdbc.properties</include>
           <include>log4j.properties</include>
+          <include>memcached.properties</include>
         </includes>
       </resource>
 
