--- a/pom.xml
+++ b/pom.xml
@@ -326,6 +326,12 @@
       <version>1.4.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-elasticsearch</artifactId>
+      <version>2.0.4.RELEASE</version>
+    </dependency>
+
   </dependencies>
 
   <build>
