--- a/src/main/resources/config/dev/log4j.properties
+++ b/src/main/resources/config/dev/log4j.properties
@@ -1,25 +1,18 @@
-### 设置Logger输出级别和输出目的地 ###
-log4j.rootLogger=info,stdout,logfile
+log4j.rootLogger=INFO,console,file
 
+#file
+log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.file.Encoding=uft-8
+log4j.appender.file.Threshold=INFO
+log4j.appender.file.File=C:/devlogs/ssm/server.log
+log4j.appender.file.DatePattern='.'yyyy-MM-dd-HH-mm
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%c]-[%L]-[%p] %m%n
 
-### 把日志信息输出到控制台 ###
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.Target=System.err
-log4j.appender.stdout.layout=org.apache.log4j.SimpleLayout
+#console
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.Encoding=uft-8
+log4j.appender.console.Threshold=INFO
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d %5p (%c:%L) - %m%n
 
-
-### 把日志信息输出到文件：jbit.log ###
-log4j.appender.logfile=org.apache.log4j.FileAppender
-log4j.appender.logfile.File=jbit.log
-log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
-log4j.appender.logfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %F %p %m%n
-
-
-###显示SQL语句部分
-log4j.logger.com.ibatis=debug
-#log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=DEBUG
-#log4j.logger.com.ibatis.common.jdbc.ScriptRunner=DEBUG
-#log4j.logger.com.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
-#log4j.logger.java.sql.Connection=DEBUG
-#log4j.logger.java.sql.Statement=debug
-#log4j.logger.java.sql.PreparedStatement=DEBUG
