--- a/src/main/resources/config/dev/log4j.properties
+++ b/src/main/resources/config/dev/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.file.Encoding=uft-8
 log4j.appender.file.Threshold=INFO
 log4j.appender.file.File=C:/devlogs/ssm/server.log
-log4j.appender.file.DatePattern='.'yyyy-MM-dd-HH-mm
+log4j.appender.file.DatePattern='.'yyyy-MM-dd
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%c]-[%L]-[%p] %m%n
 
