--- a/src/main/resources/config/dev/log4j.properties
+++ b/src/main/resources/config/dev/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootLogger=INFO,console,file
 
 #file
 log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.file.Encoding=uft-8
+#log4j.appender.file.Encoding=uft-8
 log4j.appender.file.Threshold=INFO
 log4j.appender.file.File=C:/devlogs/ssm/server.log
 log4j.appender.file.DatePattern='.'yyyy-MM-dd
@@ -11,7 +11,7 @@ log4j.appender.file.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%c]-[%L]-
 
 #console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.Encoding=uft-8
+#log4j.appender.console.Encoding=uft-8
 log4j.appender.console.Threshold=INFO
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d %5p (%c:%L) - %m%n
